# unn-improved-eureka

./: .gitignore  Cargo.toml  package.json  reaaaaaaally-small-binary.zsh  sql_schema.txt
.sqlx/: query-03679e48b50b2e0193834493097cd632ae3195c60d2d28ef1dc08efdfc5867f1.json  query-093d91674a6ae1316df69296c24a3d80e7d358a332fa8f1fe8268e6d17d1d6e5.json  query-0d87758690328a076b9d7e51695928d4020769d5cf6f800038bec535d6c3f549.json  query-16703174237e1e1309afb7a28e853170050768328357a5b41164f52a4c082fd1.json  query-219201004ce271cba849eba9e0825b75a8eb7573dcba82fbc27be39ef5bea449.json  query-2570f1ee1c7c7058953a68ae6b824298e62db908750c193aa5e3778d8811d831.json  query-287968ce60377cda547f3321ad5ec9de3e0a306c58b31a14bf546420d5725ab9.json  query-2c1b629f54f2fc4fa77a75f05aa131b6e0d378015650a9c23516b0be56179b9c.json  query-36a558e7328904a1ac120b313ebb67251af4c68bc70e55097712948ad469adba.json  query-3abcd2ec6356c8283e0c4f8c2cfbd395c9811ad170a6e43fca2309021b82436a.json  query-3e8ec5e8adb5c4a40f30fc0ddcd4392065399f534133c8902a1dab0e5cd9849f.json  query-4d3a0a28938d900d36454ef9f5bc3aec961cb0b52f0154377feb45c50a458e00.json  query-4ff122d4bb99f76363e8f6019c398edc98846dae7d8c8d770333200ef5c22b08.json  query-54b93c2327593c4816c97bc14d82712296abbf47707020eef837788725704b64.json  query-553133c6570887decbd7d53950329ca40e0b990bd1caf00ddb2fc86c9856c0f1.json  query-5960c2286ca25d7dd841c502ae7f7271c2f1adf12f919f6a2f5c9d095e653316.json  query-6fa5470c8cccc69652ea077a22095df5ef8f48036b6dca08db03476d308dd53b.json  query-7916411e51ae74fbbe2f4e644c08c9eb8397679a1e2da905ad11c86508f66b43.json  query-7cc5c528b996539568ecf8022ba4fc76f77b07d309f47235193c70c5e8f6dcdf.json  query-82ae1a8fb449796d3bd1067f463d2c3a4800def1a6f2b4396bf6e596a0ef8548.json  query-8688ce34277d10e20b2ee3cd3e92d8791708804985fa2ce83167cc69ea71b484.json  query-96d1de94ee236622fc6f2caf2f59aea5e1974ef7a7a04c0e5554b48421bc6aee.json  query-973a70288aa142f73a9ea18f12a4971f2533bdfc5a89b84465b740b72363ef6c.json  query-9b54627e050ef7e890e46ae21f3ce56fd7e27e5016cf6b26ef6b7c327f6d7452.json  query-a5840d048f005e802db47d512692b47c1a3941011608ec8021f006778365f2bc.json  query-a70791a1eb4c206003ba8d29fbaa32e8d16f5aba55ad9a54df8b64e6ec95e5ca.json  query-a85f85a36b5a04f869a83fda53b16c10b5be68c08f6727060b368523fefa63ec.json  query-ac3aa9c7d31d4ae92441920a6dfef5860ff467170f02e52f8d977c85085fca2f.json  query-b609f02b61f79ece5c11d454ff698568d08e5bb65c37ff05e1caa54bd5e63b6a.json  query-b719dad7004df10bc580950bc562139d9b870d46ce1110b6cad003b1456b1215.json  query-bb133c6de8e7410f36fb446b3cd281492d56b2a19040224461a2cda895ff979b.json  query-c076469518c36cc74c8b605bd3557715d2eeccea7ab63f2f21c1b66dc3ab1581.json  query-c3d0cf1a1647951f5c1f5b64df8fc2ee934913a2d39566293a0fd06db09eef50.json  query-c4583a1ae4974864e8464d552995f36ffc6056280f0688d7a9f8b19bbd3724d2.json  query-c89b2f9eb5f176a580078974cadd705d9b1b0848158f85a96f33fbf2818563d1.json  query-caa0dfa7cfa1c60ed4f2edeb51459c589d3a451a82d4af99a8ba8d8cce3ea2be.json  query-cc32075fd25ae7f63b49bd15040b3326dbf42e3a67a4240f1cfa9e3afcb5ca37.json  query-d1b35de0f275253ec8fcdf23245986bb1b5c63a094aae3bbbd532f4d15695b4c.json  query-d4d116018948d96feebf14ca9341d7fd47c1a893263a95e10af19beb65195276.json  (+11 more)
src/: lib.rs  logs_env.rs  main.rs  preludes.rs  (+1 more)
(+124 files in other folders)
