[package]
name = "improved-eureka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-once-cell = "0.4.2"
chrono = "0.4.23"
const_format = "0.2.30"
futures = "0.3.26"
guard = "0.5.1"
hex = "0.4.3"
hmac = "0.12.1"
juniper = { version = "0.15.10", features = ["schema-language"] }
lazy_static = "1.4.0"
once_cell = "1.16.0"
paste = "1.0.9"
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["macros", "rt", "full"] }
tokio-postgres = { version = "0.7.7", features=["with-uuid-1", "with-chrono-0_4"] }
tokio-test = "0.4.2"
uuid = { version = "1.2.1", features = ["v4"] }
warp = "0.3.3"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-final]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
