[package]
name = "improved-eureka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
arcs-env-rs = "0.1.0"
arcs-logging-rs = "0.1.2"

actix-web = { version = "4.4.0", features = ["rustls"] }

chrono = { version = "0.4.23", features = ["serde"] }
const_format = "0.2.30"
hex = "0.4.3"
hmac = "0.12.1"
paste = "1.0.9"
lazy_static = "1.4.0"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["macros", "rt", "full"] }

once_cell = "1.16.0"
uuid = { version = "1.2.1", features = ["v4", "serde"] }

serde = "1.0.183"
serde_json = "1.0.87"

sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

async-graphql = { version = "6.0.5", features = ["uuid", "chrono", "tokio"] }
async-graphql-actix-web = "6.0.5"
constant_time_eq = "0.3.0"

reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
sha256 = "1.4.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-final]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
